[gd_scene load_steps=7 format=3 uid="uid://dbdnl73qdjbvh"]

[ext_resource type="Script" path="res://Scripts/PowerUp.gd" id="1_k2yo7"]
[ext_resource type="Texture2D" uid="uid://do7b7r0v22t03" path="res://Assets/icon_color.svg" id="2_r8mac"]
[ext_resource type="AudioStream" uid="uid://dp0plffntgcad" path="res://Audio/audio-bounce.ogg" id="3_cfn4j"]
[ext_resource type="AudioStream" uid="uid://bn3q16fxlo7ux" path="res://Audio/powerUpSound2.wav" id="4_naq7d"]
[ext_resource type="PackedScene" uid="uid://dxtn55ep8wxdr" path="res://Scenes/Trail2D.tscn" id="5_hp7ry"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sp1en"]
radius = 44.0

[node name="PowerUp" type="CharacterBody2D" groups=["power"]]
script = ExtResource("1_k2yo7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_r8mac")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sp1en")
debug_color = Color(0.0588235, 0.52549, 1, 0.419608)

[node name="AudioCollision" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cfn4j")

[node name="AudioPowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_naq7d")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(4.5, 4.5)

[node name="Trail2D" parent="." instance=ExtResource("5_hp7ry")]
z_index = -1
rotation = 1.5708
width = 100.0
begin_cap_mode = 2
end_cap_mode = 2
is_emitting = true
target_path = NodePath("..")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
